<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/registerpage"
    tools:context=".Registration">

    <EditText
        android:id="@+id/fullname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:backgroundTint="@color/background_dark"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/secondary_text_light"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/from"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:backgroundTint="@color/background_dark"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/secondary_text_light"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/mail_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:backgroundTint="@color/background_dark"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/secondary_text_light"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/new_pass_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:backgroundTint="@color/background_dark"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/secondary_text_light"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/registration_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/regg"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        />

</LinearLayout>