<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/abel"
        android:text="@string/Head"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/background_dark"
        app:fontFamily="@font/leckerli_one" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textAlignment="textStart"
        android:textColor="@android:color/secondary_text_light"
        android:backgroundTint="@color/background_dark"
        android:layout_marginTop="60dp"
        android:textCursorDrawable="@null"
        android:textColorHighlight="@android:color/holo_blue_dark"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_dark"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:textAlignment="textStart"
        android:textColor="@android:color/secondary_text_light"
        android:textColorHighlight="@android:color/holo_blue_dark"
        android:textCursorDrawable="@null"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/background_dark"
        android:background="@color/lighter_gray"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/reg"
        android:background="@color/transparent"
        android:textStyle="normal"
        android:textColor="@color/black"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        />


</LinearLayout>